<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_registry"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RegistryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_registry" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_username"
            android:text="@string/reg_username"
            android:layout_alignStart="@+id/reg_et_username"
            android:layout_alignLeft="@+id/reg_et_username"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_username"
            android:ems="18"
            android:hint="@string/reg_username"
            android:layout_below="@+id/reg_tv_username"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_name"
            android:text="@string/reg_name"
            android:layout_below="@+id/reg_et_username"
            android:layout_alignStart="@+id/reg_et_username"
            android:layout_alignLeft="@+id/reg_et_username"
            android:textSize="20sp">
            </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_name"
            android:ems="18"
            android:hint="@string/reg_name"
            android:layout_below="@+id/reg_tv_name"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_prename"
            android:layout_below="@+id/reg_et_name"
            android:layout_alignStart="@+id/reg_et_name"
            android:layout_alignLeft="@+id/reg_et_name"
            android:text="@string/reg_prename"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_prename"
            android:ems="18"
            android:hint="@string/reg_prename"
            android:layout_below="@+id/reg_tv_prename"
            android:layout_alignStart="@+id/reg_tv_prename"
            android:layout_alignLeft="@+id/reg_tv_prename"
            android:inputType="textPersonName"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_street"
            android:layout_below="@+id/reg_et_prename"
            android:layout_alignStart="@+id/reg_et_prename"
            android:layout_alignLeft="@+id/reg_et_prename"
            android:text="@string/reg_street"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_street"
            android:ems="18"
            android:hint="@string/reg_street"
            android:layout_below="@+id/reg_tv_street"
            android:layout_alignStart="@+id/reg_tv_street"
            android:layout_alignLeft="@+id/reg_tv_street"
            android:inputType="textPersonName"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_number"
            android:layout_below="@+id/reg_et_street"
            android:layout_alignStart="@+id/reg_et_street"
            android:layout_alignLeft="@+id/reg_et_street"
            android:text="@string/reg_number"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_number"
            android:ems="6"
            android:hint="@string/reg_number"
            android:layout_below="@+id/reg_tv_number"
            android:layout_alignStart="@+id/reg_tv_number"
            android:layout_alignLeft="@+id/reg_tv_number"
            android:inputType="numberDecimal"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_postal"
            android:layout_below="@+id/reg_et_street"
            android:layout_alignStart="@+id/reg_et_postal"
            android:layout_alignLeft="@+id/reg_et_postal"
            android:text="@string/reg_postal"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_postal"
            android:ems="6"
            android:hint="@string/reg_postal"
            android:layout_below="@+id/reg_tv_number"
            android:layout_alignRight="@+id/reg_et_street"
            android:layout_alignEnd="@+id/reg_et_street"
            android:inputType="numberDecimal"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_city"
            android:layout_below="@+id/reg_et_number"
            android:layout_alignStart="@+id/reg_et_prename"
            android:layout_alignLeft="@+id/reg_et_prename"
            android:text="@string/reg_city"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_city"
            android:ems="18"
            android:hint="@string/reg_city"
            android:layout_below="@+id/reg_tv_city"
            android:layout_alignStart="@+id/reg_tv_street"
            android:layout_alignLeft="@+id/reg_tv_street"
            android:inputType="textPersonName"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_country"
            android:layout_below="@+id/reg_et_city"
            android:layout_alignStart="@+id/reg_et_number"
            android:layout_alignLeft="@+id/reg_et_number"
            android:text="@string/reg_country"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_country"
            android:ems="18"
            android:hint="@string/reg_country"
            android:layout_below="@+id/reg_tv_country"
            android:layout_alignStart="@+id/reg_tv_country"
            android:layout_alignLeft="@+id/reg_tv_country"
            android:inputType="textPersonName"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_password"
            android:layout_below="@+id/reg_et_country"
            android:layout_alignStart="@+id/reg_et_country"
            android:layout_alignLeft="@+id/reg_et_country"
            android:text="@string/reg_password"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_password"
            android:ems="18"
            android:layout_below="@+id/reg_tv_password"
            android:layout_alignStart="@+id/reg_tv_password"
            android:layout_alignLeft="@+id/reg_tv_password"
            android:inputType="textPassword"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_sec_password"
            android:layout_below="@+id/reg_et_password"
            android:layout_alignStart="@+id/reg_et_password"
            android:layout_alignLeft="@+id/reg_et_password"
            android:text="@string/reg_sec_password"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_et_sec_password"
            android:ems="18"
            android:layout_below="@+id/reg_tv_sec_password"
            android:layout_alignStart="@+id/reg_tv_sec_password"
            android:layout_alignLeft="@+id/reg_tv_sec_password"
            android:layout_alignRight="@+id/reg_tv_sec_password"
            android:inputType="textPassword"
            android:maxLines="1">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tv_error"
            android:layout_below="@+id/reg_et_sec_password"
            android:layout_centerHorizontal="true"
            android:text="@string/reg_error"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/reg_button_registry"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/reg_tv_error"
            android:text="@string/reg_registry">
        </Button>


    </RelativeLayout>



</ScrollView>